# seedkit-viewer

./: .anjuta_sym_db.db  .gitignore  Makefile.am  Makefile.am.bak  Makefile.in  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  init.js  libtool  libtool.bkp
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  seedkit
Debug/src/.deps/: callbacks.Po  main.Po  seedkit-gtk.Po  seedkit-inspector.Po  seedkit-webkit.Tpo  web_inspector.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: Makefile.am  control.in  seedkit-viewer.man
debian/: README.Debian  README.source  changelog  control.in  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  seedkit-viewer.cron.d.ex  seedkit-viewer.default.ex  seedkit-viewer.doc-base.EX  watch.ex
examples/: ui.html  ui.js
examples/dbus/: dbus-notification.js
examples/dbus/base/: dd.js  ui.js
examples/dbus/rhythmbox/: dbus-local.js  dbus-rhythmbox.js  dbus-rhythmbox.js~  ui.html  ui.html~  ui.js  ui.js~
examples/dbus/tracker/: dbus-tracker.js  ui.html  ui.js
examples/gio/: test.html~  ui.css  ui.html  ui.html~  ui.js  ui.js~
examples/gst/: ui.html  ui.js
examples/notification/: README  test.css  test.html  test.html~  test.js  test.js~  test.txt  ui.css  ui.html  ui.js
examples/template/: ui.css  ui.html
po/: Makefile.in  POTFILES.in
src/: .gitignore  Makefile.am  Makefile.am.bak  Makefile.in  callbacks.c~  callbacks.h  init.js  main.c  main.c~  seedkit-goption.c~  seedkit-goption.h  seedkit-goption.h~  seedkit-gtk.c  seedkit-gtk.c~  seedkit-gtk.h  seedkit-inspector.c  seedkit-inspector.h  seedkit-webkit.c  seedkit-webkit.c~  seedkit-webkit.h  seedkit-webkit.h~  web_inspector.c~  web_inspector.h~
src/libseedkit/: Makefile.am  Makefile.in  seed-view.c  seed-view.h  seedkit-1.0.pc  seedkit-1.0.pc.in  seedkit-view.c  seedkit-view.h
src/seedkit-viewer/: Makefile.am  Makefile.in  main.c  seedkit-goption.c  seedkit-gtk.c  seedkit-gtk.h  seedkit-inspector.c  seedkit-inspector.h  seedkit-viewer.h  seedkit-webkit.c  seedkit-webkit.h
